--- a/css/custom.css
+++ b/css/custom.css
@@ -101,6 +101,6 @@ img {
   color: #fff;
 }
 #header_area .col-md-9 ul ul li ul li a:hover {
-  background: #ea1a70;
+  background: #c95283;
   color: #fff;
 }
